--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -309,10 +309,7 @@ padding: 0;
     margin: var(--standard-padding) 0;
 }
 
-.message-box {
-    height: 0;
-    overflow: hidden;
-}
+
 .no-bottom-margin {
     margin-bottom: 0;
     padding-bottom: 0;
@@ -328,7 +325,7 @@ padding: 0;
     line-height: 1.4em;
     font-weight: 700;
     background-color: var(--color-1);
-    padding: var(--standard-padding);
+    padding: calc(var(--standard-padding) / 2) var(--standard-padding) var(--standard-padding);
     max-width: var(--max-width);
     position: relative;
     overflow: hidden;
@@ -341,12 +338,15 @@ padding: 0;
 .quote.ceo {
     color: var(--color-11);
 }
-.quote-mark {
+.quote-mark, .quote-mark-fr {
     display: block;
     font-size: 10.5rem;
     font-weight: 600;
     font-family: 'Arial Black', Arial, Helvetica, sans-serif;
     padding: 0;
+    margin: 0;
+    position: relative;
+    top: 15px
 }
 .quote-name-title {
     color: white;
@@ -693,15 +693,12 @@ padding: 0;
 
 }
 
-.donors h4 {
+.donors h4, .donors h5 {
     margin-bottom: 0;
     padding-bottom: 0;
+    font-size: 1em;
 }
 
-.donor-list {
-    height: 0;
-    overflow: hidden;
-}
 
 .hidden-list {
     list-style-type: none;
@@ -714,8 +711,17 @@ padding: 0;
     line-height: 1.2em;
     font-weight: 700;
     color: var(--color-4);
-
-
+    overflow: hidden;
+    position: relative;
+}
+.donor-quote .text-cover {
+    width:900px;
+}
+.donor-quote .solid-cover {
+    background-color: var(--color-12);
+}
+.donor-quote .gradient-cover {
+    background: linear-gradient(180deg, transparent 0, var(--color-12) 100%);
 }
 .donor-button {
     margin: 3rem 0 5rem 0 !important;
@@ -804,7 +810,7 @@ footer h3 {
         line-height: 1.2em;
     }
 
-    h1, h2, h3, h4 {
+    h1, h2, h3, h4, h5 {
         line-height: 1.2em;
     } 
     h2 {
@@ -884,6 +890,10 @@ footer h3 {
     }
     .wide-content {
         padding-right: 35%;
+    }
+    .message-box {
+        height: 0;
+        overflow: hidden;
     }
 
     .message-box img {
@@ -1218,6 +1228,11 @@ footer h3 {
     .research {
         padding-bottom: 40px !important;
     }
+    .research h3 {
+        margin: .25rem 0 12px;
+        display: block;
+        height: 1.3em !important;
+    }
 
 
     .donors li {
@@ -1225,9 +1240,6 @@ footer h3 {
         margin-bottom: 3px;
     }
 
-    .financials {
-
-    }
     .yir-process, .yir-outputs {
         position: relative;
         left: -51px;
