--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -68,7 +68,7 @@ sup {
     font-size: .6em;
 }
 .hide-narrow {
-    display: none;
+    display: none !important;
 }
 h2 {
     color: var(--color-1);
@@ -258,8 +258,8 @@ padding: 0;
 .text-cover {
     position: absolute;
     width: 100%;
-    height:60rem;
-    top: -30rem;
+    height:80rem;
+    top: -40rem;
     display: flex;
     flex-direction: column;
 }
@@ -269,13 +269,13 @@ padding: 0;
 .solid-cover {
     background-color: var(--color-1);
     width: 100%;
-    height: 30rem;
+    height: 40rem;
 
 }
 .gradient-cover {
     display: block;
     width: 100%;
-    height: 30rem;
+    height: 40rem;
     background: linear-gradient(180deg, transparent 0, var(--color-1) 100%);
 }
 
@@ -347,6 +347,10 @@ padding: 0;
     margin: 0;
     position: relative;
     top: 15px
+}
+.quote-mark-fr {
+    top:0;
+    margin: .4em 0;
 }
 .quote-name-title {
     color: white;
@@ -467,6 +471,11 @@ padding: 0;
     background-color: var(--color-13);
     padding-top: 5px;
     margin-top: 20px;
+}
+
+.approach .message-box {
+    height: 0;
+    overflow: hidden;
 }
 
 .approach-diagram-content {
